--- a/summer.html
+++ b/summer.html
@@ -24,70 +24,88 @@
             </ul>
         </div>
     </div>
-    <div id = "summer-content">
-        <h2 id = "sub-heading">Join Us At The</h1>
-        <h1 id = "heading">Summer Programme</h1>
-        <div id = "content-stats">
-            <div class = "stat">
-                <h1>14</h1>
-                <h2>Days</h2>
+    <div id = "summer">
+        <div id = "summer-content">
+            <h2 id = "sub-heading">Join Us At The</h1>
+            <h1 id = "heading">Summer Programme</h1>
+            <div id = "content-stats">
+                <div class = "stat">
+                    <h1>14</h1>
+                    <h2>Days</h2>
+                </div>
+                <div class = "stat">
+                    <h1>6</h1>
+                    <h2>Mentors</h2>
+                </div>
+                <div class = "stat">
+                    <h1>8+</h1>
+                    <h2>Skills</h2>
+                </div>
+                <div class = "stat">
+                    <h1>3600+</h1>
+                    <h2>Mins</h2>
+                </div>
+                <div class = "stat">
+                    <h1>20+</h1>
+                    <h2>Sessions</h2>
+                </div>
+                <div class = "stat">
+                    <h1>100+</h1>
+                    <h2>Students</h2>
+                </div>
+                <div class = "stat">
+                    <h1>17</h1>
+                    <h2>States</h2>
+                </div>
             </div>
-            <div class = "stat">
-                <h1>6</h1>
-                <h2>Mentors</h2>
-            </div>
-            <div class = "stat">
-                <h1>8+</h1>
-                <h2>Skills</h2>
-            </div>
-            <div class = "stat">
-                <h1>3600+</h1>
-                <h2>Mins</h2>
-            </div>
-            <div class = "stat">
-                <h1>20+</h1>
-                <h2>Sessions</h2>
-            </div>
-            <div class = "stat">
-                <h1>100+</h1>
-                <h2>Students</h2>
-            </div>
-            <div class = "stat">
-                <h1>17</h1>
-                <h2>States</h2>
-            </div>
+            <div id = "summer-description">
+                <div id = "content-description">
+                    <p>The Summer Programme was launched with the effort to make basic valuable skills available to the students and help them make the best use of their summertime! We believe in the power of mentorship and through rigorous online sessions in the span of two weeks we brought together experts from fields such as Content Writing, Outreach & Expansion, Website Development, Graphic Designing and Social Media Marketing to share their expertise and knowledge.</p>
+                </div>
+                <div id = "content-img">
+                    <img src="image/summer.jpg">
+                </div>
+            </div> 
         </div>
-        <div id = "summer-description">
-            <div id = "content-description">
-                <p>The Summer Programme was launched with the effort to make basic valuable skills available to the students and help them make the best use of their summertime! We believe in the power of mentorship and through rigorous online sessions in the span of two weeks we brought together experts from fields such as Content Writing, Outreach & Expansion, Website Development, Graphic Designing and Social Media Marketing to share their expertise and knowledge.</p>
-            </div>
-            <div id = "content-img">
-                <img src="image/summer.jpg">
-            </div>
-        </div> 
-    </div>
-    <div id = "testimonials">
-        <figure class="snip1192">
-            <blockquote>Calvin: Sometimes when I'm talking with others, my words can't keep up with my thoughts. I wonder why we think faster than we speak. Hobbes: Probably so we can think twice. </blockquote>
-            <div class="author">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample1.jpg" alt="sq-sample1"/>
-              <h5>Pelican Steve <span> LittleSnippets</span></h5>
-            </div>
-          </figure>
-          <figure class="snip1192 hover">
-            <blockquote>Thank you. before I begin, I'd like everyone to notice that my report is in a professional, clear plastic binder...When a report looks this good, you know it'll get an A. That's a tip kids. Write it down.</blockquote>
-            <div class="author">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample24.jpg" alt="sq-sample24"/>
-              <h5>Max Conversion<span> LittleSnippets</span></h5>
-            </div>
-          </figure>
-          <figure class="snip1192">
-            <blockquote>My behaviour is addictive functioning in a disease process of toxic co-dependency. I need holistic healing and wellness before I'll accept any responsibility for my actions.</blockquote>
-            <div class="author">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
-              <h5>Eleanor Faint<span> LittleSnippets</span></h5>
-            </div>
-          </figure>
+        <div id = "testimonials">
+            <figure class="snip1192">
+                <blockquote>As a participant, I found the program to be highly informative and valuable in enhancing my skills and knowledge in web development.
+                    I am extremely grateful for the opportunity to be a part of this INTERNSHIP PROGRAM AT 
+                    " THE INDIAN VIDYARTHI " for web development. The knowledge and skills I have gained will undoubtedly benefit.</blockquote>
+                <div class="author">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample1.jpg" alt="sq-sample1"/>
+                <h5>Rudra Prasad Mahapatra<span>Roland Institute of Technology Berhmpur</span></h5>
+                </div>
+            </figure>
+            <figure class="snip1192 hover">
+                <blockquote>It was great experience to me ,the mentors and the guides were very friendly, and too good in nature. I really feel fortunate to be the part of this organization.</blockquote>
+                <div class="author">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample24.jpg" alt="sq-sample24"/>
+                <h5>Saurabh Kumar<span>Shaheed Bhagat Singh College<br>University of Delhi </span></h5>
+                </div>
+            </figure>
+            <figure class="snip1192">
+                <blockquote>The thing I found most surprising was that it was totally free! When I was browsing for things which I can do during my vacation, almost everything was paid- hence I thought to try this- but this thing was too good to be free !</blockquote>
+                <div class="author">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
+                <h5>Pranay Bedi Verma<span>DPS RK puram</span></h5>
+                </div>
+            </figure>
+            <figure class="snip1192">
+                <blockquote>The summer internship was an incredibly enriching experience. Throughout the program, I had the chance to work on diverse projects that expanded my skill set and knowledge. The collaborative environment fostered meaningful interactions with colleagues and mentors, allowing me to learn from their expertise. I appreciated the hands-on approach, as it helped me gain practical insights into real-world challenges. The company's commitment to professional development was evident through workshops and networking events that enhanced my understanding of the industry.This internship not only provided valuable exposure to the field but also improved my confidence in tackling complex tasks. Overall, I'm grateful for this opportunity, and I'm confident that the skills I've acquired will prove invaluable in my future endeavors.</blockquote>
+                <div class="author">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
+                <h5>Aman Deep Savaranya<span>The Air Force School</span></h5>
+                </div>
+            </figure>
+            <figure class="snip1192">
+                <blockquote>The thing I found most surprising was that it was totally free! When I was browsing for things which I can do during my vacation, almost everything was paid- hence I thought to try this- but this thing was too good to be free !</blockquote>
+                <div class="author">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
+                <h5>Pranay Bedi Verma<span>DPS RK puram</span></h5>
+                </div>
+            </figure>
+        </div>
     </div>
 </body>
 </html>
