--- a/summer.html
+++ b/summer.html
@@ -67,6 +67,7 @@
                 </div>
             </div> 
         </div>
+        <p id = "testimonials-heading">Testimonials</p>
         <div id = "testimonials">
             <figure class="snip1192">
                 <blockquote>As a participant, I found the program to be highly informative and valuable in enhancing my skills and knowledge in web development.
@@ -99,10 +100,12 @@
                 </div>
             </figure>
             <figure class="snip1192">
-                <blockquote>The thing I found most surprising was that it was totally free! When I was browsing for things which I can do during my vacation, almost everything was paid- hence I thought to try this- but this thing was too good to be free !</blockquote>
+                <blockquote>The summer internship program was a great opportunity for mastering new skills with experienced mentors, even the the mentors were also as experienced as professional mentor.
+
+                    <br>Thank you team TIV </blockquote>
                 <div class="author">
                 <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample29.jpg" alt="sq-sample29"/>
-                <h5>Pranay Bedi Verma<span>DPS RK puram</span></h5>
+                <h5>Hrishikesh Dheeraj<span>Delhi University</span></h5>
                 </div>
             </figure>
         </div>
