--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/work.css">
     <link rel="stylesheet" href="css/partners.css">   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="image/tiv logo.png">
     <script src="js/index.js" defer></script>
 </head>
@@ -200,14 +201,16 @@
                 </div>
             </a>
         </div>
-        <div class="contact-us-title">
-            <h1 class="heading" style="color: white;"><center>Contact Us</center></h1>
-        </div>
-        <div class="contact-icons">
-            <a href="#"><span>Mail Us</span></a>
-            <a href="#"><span>Mail Us again!</span></a>
-            <a href="#"><span>Call Us</span></a>
-            <a href="#"><span>Call Us again!</span></a>
+        <div class="contact">
+            <div class="contact-us-title">
+                <h1 class="heading" style="color: white;"><center>Contact Us</center></h1>
+            </div>
+            <div class="contact-icons">
+                <a href="#"><span>Mail Us</span></a>
+                <a href="#"><span>Mail Us again!</span></a>
+                <a href="#"><span>Call Us</span></a>
+                <a href="#"><span>Call Us again!</span></a>
+            </div>
         </div>
     </div>
 </body>
