--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/partners.css">   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
     <link rel="icon" type="image/png" href="image/tiv logo.png">
     <script src="js/index.js" defer></script>
 </head>
@@ -206,10 +207,13 @@
                 <h1 class="heading" style="color: white;"><center>Contact Us</center></h1>
             </div>
             <div class="contact-icons">
-                <a href="#"><span>Mail Us</span></a>
-                <a href="#"><span>Mail Us again!</span></a>
-                <a href="#"><span>Call Us</span></a>
-                <a href="#"><span>Call Us again!</span></a>
+                <a href="mailto:theindianvidyarthiofficial@gmail.com" ><span>Mail Us</span></a>
+                <a href="mailto:president.tiv@gmail.com"><span>Mail our president</span></a>
+                <a href="tel:+919415194674"><span>Message Us</span></a>
+                <a href="tel:+917827527161"><span>Call Us</span></a>
+                <a href="https://www.linkedin.com/company/theindianvidyarthi/?originalSubdomain=in" target=_blank><span></span></a> <!-- x.com icon -->
+                <a href="https://www.instagram.com/theindianvidyarthi/" target=_blank><span></span></a> <!-- Instagram icon -->
+                <a href="https://twitter.com/theivofficial" target=_blank><span></span></a> <!-- LinkedIn icon -->
             </div>
         </div>
     </div>
