--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div id = "Part3">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 11</h1>
-                    <p>padhle mc</p>
+                    <p>bies</p>
                 </div>
             </a>
             <a href = "">
@@ -211,9 +211,9 @@
                 <a href="mailto:president.tiv@gmail.com"><span>Mail our president</span></a>
                 <a href="tel:+919415194674"><span>Message Us</span></a>
                 <a href="tel:+917827527161"><span>Call Us</span></a>
-                <a href="https://www.linkedin.com/company/theindianvidyarthi/?originalSubdomain=in" target=_blank><span></span></a> <!-- x.com icon -->
+                <a href="https://twitter.com/theivofficial" target=_blank><span></span></a> <!-- x.com icon -->
                 <a href="https://www.instagram.com/theindianvidyarthi/" target=_blank><span></span></a> <!-- Instagram icon -->
-                <a href="https://twitter.com/theivofficial" target=_blank><span></span></a> <!-- LinkedIn icon -->
+                <a href="https://www.linkedin.com/company/theindianvidyarthi/?originalSubdomain=in" target=_blank><span></span></a> <!-- LinkedIn icon -->
             </div>
         </div>
     </div>
