--- a/blogs.html
+++ b/blogs.html
@@ -27,25 +27,25 @@
     <div class="container">
         <a href="blogs/blog1.html"><div class="card">
           <div class="card__header">
-            <img src="https://source.unsplash.com/600x400/?computer" alt="card__image" class="card__image" width="600">
+            <img src="image/Blog1_Image1.png" alt="card__image" class="card__image" width="600" height="200">
           </div>
           <div class="card__body">
-            <span class="tag tag-blue">Technology</span>
-            <h4>What's new in 2022 Tech</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+            <span class="tag tag-blue">Awareness</span>
+            <h4>THE INDIAN BRAIN DRAIN</h4>
+            <p>One of the biggest barriers that Bharat has to break as it marches towards its aim of becoming a developed nation by 2047 is 'BRAIN DRAIN'. </p>
           </div>
           <div class="card__footer">
             <div class="user">
               <div class="user__info">
-                <h5>Jane Doe</h5>
-                <small>2h ago</small>
+                <h5>Tanav Bhatia</h5>
+                <small>14/08/2023</small>
               </div>
             </div>
           </div>
         </div></a>
         <a href="blogs/blog2.html"><div class="card">
           <div class="card__header">
-            <img src="https://source.unsplash.com/600x400/?food" alt="card__image" class="card__image" width="600">
+            <img src="https://source.unsplash.com/600x400/?food" alt="card__image" class="card__image" width="600" height="200">
           </div>
           <div class="card__body">
             <span class="tag tag-brown">Food</span>
@@ -63,7 +63,7 @@
         </div></a>
         <a href="blogs/blog3.html"><div class="card">
           <div class="card__header">
-            <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+            <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600" height="200">
           </div>
           <div class="card__body">
             <span class="tag tag-red">Automobile</span>
@@ -81,7 +81,7 @@
         </div></a>
         <a href="blogs/blog3.html"><div class="card">
             <div class="card__header">
-              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600" height="200">
             </div>
             <div class="card__body">
               <span class="tag tag-red">Automobile</span>
@@ -99,7 +99,7 @@
         </div></a>
         <a href="blogs/blog3.html"><div class="card">
             <div class="card__header">
-              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600" height="200">
             </div>
             <div class="card__body">
               <span class="tag tag-red">Automobile</span>
@@ -117,7 +117,7 @@
       </div></a>
         <a href="blogs/blog3.html"><div class="card">
             <div class="card__header">
-              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600" height="200">
             </div>
             <div class="card__body">
               <span class="tag tag-red">Automobile</span>
