--- a/team.html
+++ b/team.html
@@ -89,54 +89,54 @@
                     <p class="text">Developer & Designer</p>
             </div></a>
         </div>
-        <h1 class="heading" style="color: white;"><center>Advisory Board</center></h1>
+        <h1 class="heading" style="color: white;"><center>Other Team Members</center></h1>
         <div class="content">
             <!-- card -->
             <a href="https://twitter.com/tanav_bhatia"  target="blank_" class="card">
             <img src="image/Tanav Bhatia.jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Tanav Bhatia</p> 
-                    <p class="text"></p>
+                    <p class="text">Team Member</p>
             </div></a>
             <a href="https://www.linkedin.com/in/anshika-raj-b40686228/" target="blank_" class="card">
             <img src="image/Anshika Raj.png" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Anshika Raj</p> 
-                    <p class="text"></p>
+                    <p class="text">Team Member</p>
             </div></a>
             <a href="https://www.linkedin.com/in/android-aggarwal"  target="blank_" class="card">
             <img src="" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Anirudh Aggarwal</p> 
-                    <p class="text"></p>
+                    <p class="text">Team Member</p>
             </div></a>
             <a href="https://www.linkedin.com/in/vani-sen-037b2422a"  target="blank_" class="card">
             <img src="image/Vani Sen.jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Vani Sen</p> 
-                    <p class="text"></p>
+                    <p class="text">Team Member</p>
             </div></a>
         </div>
         <div class="content">
             <!-- card -->
             
             <a href="https://www.linkedin.com/in/vigaas-singh-8521321b3"  target="blank_" class="card">
-            <img src="" class="cardimg"/>
+            <img src="image/Vigaas.jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Vigaas Singh</p> 
-                    <p class="text"></p>
+                    <p class="text">Team Member</p>
             </div></a>
             <a href="https://www.linkedin.com/in/vardaan-gahlot-67447416b"  target="blank_" class="card">
             <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Vardaan Gahlot</p> 
-                    <p class="text"></p>
+                    <p class="text">Team Member</p>
             </div></a>
             <a href="https://www.linkedin.com/in/reet-singh/"  target="blank_" class="card">
             <img src="image\Reet Singh.jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Reet Singh</p> 
-                    <p class="text"></p>
+                    <p class="text">Team Member</p>
             </div></a>
         </div>
         
