--- a/blogs.html
+++ b/blogs.html
@@ -137,7 +137,7 @@
       <section id="loading">
         <div id="loader">
           <img src="image/loading.gif" alt="" id = "loader-gif">
-          <p id="changingText2">Launching soon... Refill your snack stash!</p>
+          <p id="changingText2">Empowering Students for a Bright Future...</p>
         </div>
     </section>
     <script>
