--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <a  href = "summer.html">Summer Internship</a>
                 </li>
                 <li class = "menu-item">
-                    <a href = "#Partners">Our Partners</a>
+                    <a href = "#PartnersH">Our Partners</a>
                 </li>
                 <li class = "menu-item">
-                    <a  href = "#contact">Contact Us</a>
+                    <a  href = "#contactH">Contact Us</a>
                 </li>
             </ul>
 
@@ -202,7 +202,7 @@
                 </div>
             </a>
         </div>
-        <div class="contact">
+        <div class="contact" id ="contactH">
             <div class="contact-us-title">
                 <h1 class="heading" style="color: white;"><center>Contact Us</center></h1>
             </div>
@@ -220,7 +220,7 @@
     <section id="loading">
         <div id="loader">
           <img src="image/loading.gif" alt="" id = "loader-gif">
-          <p id="changingText2">Launching soon... Refill your snack stash!</p>
+          <p id="changingText2">Empowering Students for a Bright Future...</p>
         </div>
     </section>
     <script>
