--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -25,65 +25,52 @@
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <div class="header">
-        <h2>THE INDIAN BRAIN DRAIN</h2>
+        <h2>INDIA OVERTAKES UK IN GDP RACE</h2>
       </div>
       
       <div class="row">
         <div class="leftcolumn">
           <div class="card">
-            <h2>Non-Residential Indians or Never Returning Indians?</h2>
+            <h2> Should we really be Happy?</h2>
             <h5>Published on Aug 14, 2023</h5>
-            <img src="../image/Blog1_Image1.png" class="image">
-            <p>One of the biggest barriers that Bharat has to break as it marches towards its aim 
-                of becoming a developed nation by 2047 is 'BRAIN DRAIN'. You surely would have 
-                heard or even have someone in your extended family who has gone abroad for 
-                jobs. This is what is known as Brain Drain, the loss of a highly trained and skilled 
-                population due to emigration to other countries.
-                Sundar Pichai, Satya Nadella, Indira Nooyi - all these big names that we have
-                heard of are the perfect examples proving the Indian Brain Drain. All of them were 
-                born in India, gained a major part of their education from India, and left India for 
-                better job opportunities and quality higher education.</p>
-            <h5>THE PROBLEM</h5>
-            <p>Data suggest that about 9 lakh Indian nationals have given up their Indian 
-                citizenship since 2015 and 23000 millionaires have given up their Indian 
-                citizenship since 2014. In today's scenario, every financially stable Indian 
-                Household aspires to send their children, to study abroad, to work abroad. Now 
-                the term NRI has changed from 'Non-residential Indians' to 'Never-returning 
-                Indians'. But the question is what is the cause of this problem? There are many 
-                answers to this question. The first reason is - Better Higher Education- In India, the 
-                share of the government's expenditure on Higher Education is very minimal and 
-                the main concentration of expenditure is only on elementary education. Secondly, 
-                there is a lack of economic opportunities and the Indian economy is unable to 
-                produce sufficient high-paying jobs for its skilled population. The quality of life in 
-                other developed countries is quite better than that in India. Also, there is a lack of 
-                research infrastructure.</p>
-            <img src="../image/Blog1_Image2.png" class="image">
-            <h5>SOLUTIONS</h5>
-            <p>Now, coming to the solutions to these problems and the necessary government 
-                steps to transform this brain drain into brain gain. First of all, the government will 
-                have to divert its expenditure towards tertiary education and set up quality higher 
-                education institutions like IITs, NLUs, and IIMs. The government would also have 
-                to make sure that the main aim of these courses is gaining skills that are 
-                important to avail high-paying skilled jobs. The government will also have to 
-                create more job opportunities in the professional sector – doctors, engineers, etc. 
-                Apart from this, the government will have to focus on improving the quality of life 
-                in the country. The Overseas Citizenship of India which is being provided by the 
-                government to the People of Indian origin is an important policy towards 
-                transforming brain drain into brain gain as more and more Indian-Origin people 
-                will be re-availing of their Indian citizenship.</p>
-            <h5>CONCLUSION</h5>
-            <p>In a nutshell, this problem of Brain Drain is like a termite to the Indian Economic 
-                development and as India marches towards its 100 years of independence, it will 
-                have to make sure that it is able to retain its skilled workforce and employ them in 
-                the country itself to make Bharat a developed economy.
+            <img src="../image/Blog2_Image1.png" class="image">
+            <p>India has crossed United Kingdom and has become the fifth largest economy in terms of GDP. This is a 
+                indeed a huge milestone but netizens, before aggrandizing the milestone let us do a reality check! 
+                So, if you are aware: GDP stands for Gross Domestic Product. It means the total amount of services and 
+                goods produced within the boundaries of the country. But have we ever noticed how many stomachs we 
+                need to feed from the same profits? </p>
+            <p>India's population is twenty times more than that of England. So, England is like a small prosperous 
+                village but we are like the jam-packed slums surviving on the same produce. 
+                India's GDP has grown, no doubt. But there is little doubt that India's population has grown too 
+                aggravating the problem. </p>
+            <p>If we compare the per capita income of the nations then India is still struggling. India is still at 144th 
+                position of the 194 economies. India's unbridled population explosion hasn't let us reach the expected 
+                pinnacles of glory. Sadly, the situation is still grim in this respect as we will soon surpass China in the 
+                coming years. </p>
+            <p>Back in the 1900s when realization dawned upon Chinese leaders that population will hamper their 
+                growth, they implemented the stringent one-child policy. It is quite important to point out that China is 
+                roughly three times larger than India but we sit very close to each other when it comes to population 
+                figures. </p>
+            <p>Back then, their government took serious actions to curb the growing population, then think about what 
+                will become of us. Till now, there is no concrete action task of the government to tackle the issue. 
+                Sometimes the leaders promise to take action but it seems that the action hides behind the mere words 
+                of tall promises. </p>
+            <p>The increasing divide between rich and poor is a grave concern too. The rich is becoming richer but there 
+                is not much elevation in the conditions of poor people compared to the GDP numbers. 
+                On a brighter note, India is the current largest growing economy in the world. But as citizens of India, if 
+                we could remove this two common hedge growths in our path, then we will reach our destination of 
+                success early. </p>
+            <p>This article is intended to make people see and realize what lies beneath the tip of the iceberg. This will 
+                help all of us to strive harder for excellence and bring new vigor in the road of economic development 
+                instead of blowing the trumpet.
                 </p>
           </div>
         </div>
         <div class="rightcolumn">
           <div class="card">
             <h2>About Me</h2>
-            <img src="../image/Tanav Bhatia.jpg" class="image">
-            <p>This blog is written by Tanav Bhatia.</p>
+            <!-- <img src="../image/Tanav Bhatia.jpg" class="image"> -->
+            <p>This blog is written by Diksha Gupta.</p>
           </div>
         </div>
       </div>
