--- a/blogs.html
+++ b/blogs.html
@@ -45,18 +45,18 @@
         </div></a>
         <a href="blogs/blog2.html"><div class="card">
           <div class="card__header">
-            <img src="https://source.unsplash.com/600x400/?food" alt="card__image" class="card__image" width="600" height="200">
+            <img src="image/Blog2_Image1.png" alt="card__image" class="card__image" width="600" height="200">
           </div>
           <div class="card__body">
-            <span class="tag tag-brown">Food</span>
-            <h4>Delicious Food</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+            <span class="tag tag-brown">Finance</span>
+            <h4>INDIA OVERTAKES UK IN GDP RACE</h4>
+            <p>India has crossed United Kingdom and has become the fifth largest economy in terms of GDP.</p>
           </div>
           <div class="card__footer">
             <div class="user">
               <div class="user__info">
-                <h5>Jony Doe</h5>
-                <small>Yesterday</small>
+                <h5>Diksha Gupta</h5>
+                <small>14/08/2023</small>
               </div>
             </div>
           </div>
