--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -38,8 +38,8 @@
                 of becoming a developed nation by 2047 is 'BRAIN DRAIN'. You surely would have 
                 heard or even have someone in your extended family who has gone abroad for 
                 jobs. This is what is known as Brain Drain, the loss of a highly trained and skilled 
-                population due to emigration to other countries.
-                Sundar Pichai, Satya Nadella, Indira Nooyi - all these big names that we have
+                population due to emigration to other countries.</p>
+            <p>Sundar Pichai, Satya Nadella, Indira Nooyi - all these big names that we have
                 heard of are the perfect examples proving the Indian Brain Drain. All of them were 
                 born in India, gained a major part of their education from India, and left India for 
                 better job opportunities and quality higher education.</p>
