--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
     <link rel="icon" type="image/png" href="image/tiv logo.png">
     <script src="js/index.js" defer></script>
+    <script src="js/navbar.js" defer></script>
 </head>
 <body>
     <div class = "nav" id="nav">
@@ -29,15 +30,20 @@
                 <li class = "menu-item">
                     <a href = "#About">About Us</a>
                 </li>
-                <li class="menu-item">
-                    <a href = "blogs.html">Our Blog</a>
+                <li class = "menu-item">
+                <div class="dropdown">
+                    <a class="dropbtn">Dropdown
+                      <i class="fa fa-caret-down"></i>
+                    </a>
+                    <div class="dropdown-content">
+                        <a href = "blogs.html">Our Blog</a>
+                        <a href = "newsletter.html">Newsletter</a>
+                        <a  href = "summer.html">Summer Internship</a>
+                    </div>
+                  </div>
                 </li>
                 <li class = "menu-item">
-                    <a href = "newsletter.html">Newsletter</a>
-                </li>
-                <li class = "menu-item">
-                    <a  href = "summer.html">Summer Internship</a>
-                </li>
+                    <a href = "team.html">Our Team</a>
                 <li class = "menu-item">
                     <a href = "#PartnersH">Our Partners</a>
                 </li>
@@ -88,21 +94,21 @@
         </div>
         <div class="partitions" id = "Work">
             <a href = "#Work">
-                <div id = "Work1">
+                <div id = "Work1" class="work-content">
                     <img src="image/aspirant.png" alt="">
                     <h1>Aspirants Network</h1>
                     <p>Coming Soon!</p>
                 </div>
             </a>
             <a href = "newsletter.html">
-                <div id = "Work2" >
+                <div id = "Work2" class="work-content">
                     <img src="image/Newsletter.jpg">
                     <h1>Newsletter</h1>
                     <p>Text aayega yahan pe</p>
                 </div>
             </a>
             <a href = "summer.html">
-                <div id = "Work3">
+                <div id = "Work3" class="work-content">
                     <img src="image/Summer Program.jpg" alt="">
                     <h1>Summer Program</h1>
                     <p>Text aayega yahan pe</p>
