--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class = "menu" id="menu">
             <ul class = "menu-items">
                 <li class = "menu-item">
-                    <a href = "#About">About Us</a>
+                    <a href = "#About" onclick="menuToggle()">About Us</a>
                 </li>
                 <li class = "menu-item">
                 <div class="dropdown">
@@ -36,19 +36,19 @@
                       <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
-                        <a href = "blogs.html">Our Blog</a>
-                        <a href = "newsletter.html">Newsletter</a>
-                        <a  href = "summer.html">Summer Internship</a>
+                        <a href = "blogs.html" onclick="menuToggle()">Our Blog</a>
+                        <a href = "newsletter.html onclick="menuToggle()"">Newsletter</a>
+                        <a  href = "summer.html" onclick="menuToggle()">Summer Internship</a>
                     </div>
                   </div>
                 </li>
                 <li class = "menu-item">
-                    <a href = "team.html">Our Team</a>
+                    <a href = "team.html" onclick="menuToggle()">Our Team</a>
                 <li class = "menu-item">
-                    <a href = "#PartnersH">Our Partners</a>
+                    <a href = "#PartnersH" onclick="menuToggle()">Our Partners</a>
                 </li>
                 <li class = "menu-item">
-                    <a  href = "#contactH">Contact Us</a>
+                    <a  href = "#contactH" onclick="menuToggle()">Contact Us</a>
                 </li>
             </ul>
 
