responsive-web-design part 1

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
     <link rel="icon" type="image/png" href="image/tiv logo.png">
-    <script src="js/index.js" defer></script>
     <script src="js/navbar.js" defer></script>
+    <script src="js/index.js" defer></script>
 </head>
 <body>
     <div class = "nav" id="nav">
@@ -36,11 +36,14 @@
                       <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
-                        <a href = "blogs.html" onclick="menuToggle()">Our Blog</a>
-                        <a href = "newsletter.html onclick="menuToggle()"">Newsletter</a>
+                        
+                        <a href = "https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/view" onclick="menuToggle()" >Newsletter</a>
                         <a  href = "summer.html" onclick="menuToggle()">Summer Internship</a>
                     </div>
                   </div>
+                </li>
+                <li  class = "menu-item">
+                    <a href = "blogs.html" onclick="menuToggle()">Our Blog</a>
                 </li>
                 <li class = "menu-item">
                     <a href = "team.html" onclick="menuToggle()">Our Team</a>
