--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
                 </li>
                 <li class = "menu-item">
                 <div class="dropdown">
-                    <a class="dropbtn">Dropdown
+                    <a class="dropbtn">Our Work
                       <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
                         
                         <a href = "https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/view" onclick="menuToggle()" >Newsletter</a>
                         <a  href = "summer.html" onclick="menuToggle()">Summer Internship</a>
+                        <p id="off">Aspirants Network</p>
                     </div>
                   </div>
                 </li>
