--- a/summer.html
+++ b/summer.html
@@ -10,9 +10,16 @@
     <link rel="icon" type="image/png" href="image/tiv logo.png"><script src="js/index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,700,0,0" />
+
 </head>
 <body>
     <div class = "nav">
+        <a href="index.html">
+            <span class="material-symbols-outlined" style="text-decoration:none; padding-top: 5px;">
+                    arrow_back
+            </span>
+        </a>
         <div class = "logo">
             <a href = "index.html"><img src="image/hor logo.jpg"></a>
         </div>
@@ -59,11 +66,11 @@
                 </div>
             </div>
             <div id = "summer-description">
+                <div >
+                    <img src="image/summer1.png" id = "content-img">
+                </div>
                 <div id = "content-description">
                     <p>The Summer Programme was launched with the effort to make basic valuable skills available to the students and help them make the best use of their summertime! We believe in the power of mentorship and through rigorous online sessions in the span of two weeks we brought together experts from fields such as Content Writing, Outreach & Expansion, Website Development, Graphic Designing and Social Media Marketing to share their expertise and knowledge.</p>
-                </div>
-                <div id = "content-img">
-                    <img src="image/summer.jpg">
                 </div>
             </div> 
         </div>
@@ -155,5 +162,8 @@
     
         setInterval(updateText2, 3000); 
       </script>
+      <script src="js/index.js"></script>      
+      <script src="js/summer.js"></script>      
+
 </body>
 </html>
