navbar bit better

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         
                         <a href = "https://drive.google.com/file/d/1Gf4yApIHI7Yv4LqLFg0BYH9Co0u_x-B-/view" onclick="menuToggle()" >Newsletter</a>
                         <a  href = "summer.html" onclick="menuToggle()">Summer Internship</a>
-                        <p id="off">Aspirants Network</p>
+                        <a id="off">Aspirants Network</a>
                     </div>
                   </div>
                 </li>
