--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
                 <div id = "Work2" class="work-content">
                     <img src="image/Newsletter.jpg">
                     <h1>Newsletter</h1>
-                    <p>Text aayega yahan pe</p>
+                    <p>Read the latest edition of our Newsletter</p>
                 </div>
             </a>
             <a href = "summer.html">
                 <div id = "Work3" class="work-content">
                     <img src="image/Summer Program.jpg" alt="">
                     <h1>Summer Program</h1>
-                    <p>Text aayega yahan pe</p>
+                    <p>Door to relevant and well-organized information</p>
                 </div>
             </a>
         </div>
