--- a/blogs.html
+++ b/blogs.html
@@ -27,7 +27,7 @@
     <div class="container">
         <a href="blogs/blog1.html"><div class="card">
           <div class="card__header">
-            <img src="image/Blog1_Image1.png" alt="card__image" class="card__image" width="600" height="200">
+            <img src="image/blog/Blog1_Image1.png" alt="card__image" class="card__image" width="600" height="200">
           </div>
           <div class="card__body">
             <span class="tag tag-blue">Awareness</span>
@@ -45,7 +45,7 @@
         </div></a>
         <a href="blogs/blog2.html"><div class="card">
           <div class="card__header">
-            <img src="image/Blog2_Image1.png" alt="card__image" class="card__image" width="600" height="200">
+            <img src="image/blog/Blog2_Image1.png" alt="card__image" class="card__image" width="600" height="200">
           </div>
           <div class="card__body">
             <span class="tag tag-brown">Finance</span>
