--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -33,7 +33,7 @@
           <div class="card">
             <h2>Non-Residential Indians or Never Returning Indians?</h2>
             <h5>Published on Aug 14, 2023</h5>
-            <img src="../image/Blog1_Image1.png" class="image">
+            <img src="../image/blog/Blog1_Image1.png" class="image">
             <p>One of the biggest barriers that Bharat has to break as it marches towards its aim 
                 of becoming a developed nation by 2047 is 'BRAIN DRAIN'. You surely would have 
                 heard or even have someone in your extended family who has gone abroad for 
@@ -57,7 +57,7 @@
                 produce sufficient high-paying jobs for its skilled population. The quality of life in 
                 other developed countries is quite better than that in India. Also, there is a lack of 
                 research infrastructure.</p>
-            <img src="../image/Blog1_Image2.png" class="image">
+            <img src="../image/blog/Blog1_Image2.png" class="image">
             <h5>SOLUTIONS</h5>
             <p>Now, coming to the solutions to these problems and the necessary government 
                 steps to transform this brain drain into brain gain. First of all, the government will 
