--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -33,7 +33,7 @@
           <div class="card">
             <h2> Should we really be Happy?</h2>
             <h5>Published on Aug 14, 2023</h5>
-            <img src="../image/Blog2_Image1.png" class="image">
+            <img src="../image/blog/Blog2_Image1.png" class="image">
             <p>India has crossed United Kingdom and has become the fifth largest economy in terms of GDP. This is a 
                 indeed a huge milestone but netizens, before aggrandizing the milestone let us do a reality check! 
                 So, if you are aware: GDP stands for Gross Domestic Product. It means the total amount of services and 
